--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                width: 240px;
                 top: 50%;
-                left: -225px;
+                left: -235px;
                 padding: 10px;
                 transform: translateY(-50%);
                 z-index: 100;
@@ -31,7 +30,6 @@
                 background-color: #fcfcfc;
                 list-style: none;
                 padding: 0;
-                padding-right: 10px;
                 margin: 0;
                 display: flex;
                 flex-direction: column;
@@ -50,8 +48,8 @@
                 transition: all 0.2s;
             }
             nav a:hover {
-                color: #000;
-                border-bottom: solid 1px #000;
+                color: #3d4351;
+                font-weight: 900;
             }
             nav:hover {
                 left: 0;
@@ -79,7 +77,7 @@
                     <a href="#sources">Sources</a>
                 </li>
             </ul>
-            <i class="fa-solid fa-bars fa-lg"></i>
+            <i class="fa-solid fa-bars fa-lg" style="margin-left: 10px"></i>
         </nav>
 
         <div class="mod-container" id="about">
@@ -236,7 +234,7 @@
                         lors de mon alternance dans le domaine postal m’a permis
                         de développer mes compétences et de les mettre en
                         pratique dans des situations réelles. Je suis
-                        enthousiaste à l’idée de rejoindre Digiposte, une
+                        enthousiaste à l’idée de rejoindre Docaposte, une
                         filiale de La Poste, pour continuer à apprendre et à
                         grandir dans ma carrière.
                     </div>
